Fixed the positioning of profile page and re-aligned posters for home page.

--- a/film-finder/src/css/user-page-css.css
+++ b/film-finder/src/css/user-page-css.css
@@ -8,10 +8,11 @@
 }
 
 .user-photo{
-
+    padding: 30px;
     margin-top: 30px;
+    position: relative;
+    margin-right: auto;
     width: 400px;
-
 }
 
 .dashboard{
